# ModelLoader

./: CMakeLists.txt  readme.md
includes/minegl/: animation.h  animator.h  bone.h  mesh.h  model.h  model_animation.h
src/: main.cpp
